Bug #48697 Accounting of scan records is incorrect causing node failure
Submitted: 11 Nov 2009 19:54 Modified: 15 Nov 2009 20:45
Reporter: Andrew Hutchings Email Updates:
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[11 Nov 2009 19:54] Andrew Hutchings
Description:
Time: Wednesday 4 November 2009 - 11:50:03
Status: Temporary error, restart node
Message: Internal program error (failed ndbrequire) (Internal error, programming error or missing error message, please report a bug)
Error: 2341
Error data: dblqh/DblqhMain.cpp
Error object: DBLQH (Line: 9385) 0x0000000a
Program: /usr/local/mysql/bin/ndbmtd
Pid: 11441 thr: 3
Version: mysql-5.1.37 ndb-7.0.8a
Trace: /db2/ndb_12_trace.log.3 /db2/ndb_12_trace.log.3_t1 /db2/ndb_12_trace.log.3_t2 /db2/ndb_12_trace.log.

"Not bug#48564, but it's evil twin." - Jonas

How to repeat:
.
[12 Nov 2009 13:05] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/90235

3167 Jonas Oreland	2009-11-12
      ndb - bug#48697 - fix accounting of scans in LQH (wrt to reserved for LCP/NR)
[12 Nov 2009 13:20] Jonas Oreland
pushed to 6.3.29 and 7.0.10

docs: accounting of no of free scan records in LQH
  could get "out-of-sync"/corrupted/screwed-up...
  so that node-recovery (or LCP) could find it self
  without a scan-record...causing node to crash
[15 Nov 2009 20:45] Jon Stephens
Documented bugfix in the NDB-6.3.29 and 7.0.10 changelogs as follows:

        Under certain conditions, accounting of the number of free scan
        records in the local query handler could be incorrect, so that
        during node recovery or a local checkpoint operations, the LQH
        could find itself lacking a scan record that is expected to
        find, causing the node to crash.

Closed.