ndb - bug#48697 - fix accounting of scans in LQH (wrt to reserved for LCP/NR)